--- a/posts/2021-04-26-emacs-project-management.org
+++ b/posts/2021-04-26-emacs-project-management.org
@@ -7,25 +7,31 @@ publish: false
 
 Project management tool, or a build tool, is an instrument for building, linting
 and testing packages. When it comes to Emacs, there are many options out in the
-wild. Arguably, the most popular options are [[https://cask.readthedocs.io/en/latest/][cask]] and [[https://github.com/alphapapa/makem][alphapapa/makem]], both
-being wonderful tools with different approach.
+wild. Arguably, the most popular options are [[https://cask.readthedocs.io/en/latest/][cask]] and [[https://github.com/alphapapa/makem.sh][alphapapa/makem.sh]], both
+being wonderful tools with different approach. There is also a relatively new
+star in the field - [[https://github.com/doublep/eldev/][doublep/eldev]].
 
-#+begin_export html
-<hr/>
-#+end_export
+In my [[https://d12frosted.io/posts/2021-04-09-emacs-d.html][recent post]] I have described an approach to convert =emacs.d= into proper
+project with useful byte compiler, linting and tests, but I never really
+explored other options.
 
-[[https://github.com/alphapapa/makem][alphapapa/makem]] is a rather small bash script (around 1200 LoC) with aim on
+#+BEGIN_HTML
+<!--more-->
+#+END_HTML
+
+[[https://github.com/alphapapa/makem.sh][alphapapa/makem.sh]] is a rather small bash script (around 1200 LoC) with aim on
 simplicity and transparency. Many projects have adopted it recently, because it
-is easy to setup (no configuration or initialization needed) and claims to have
-zero dependencies (except for the latest =bash=, which sometimes is not clear
-from the errors). You simply add a bash script to your repository.
+is easy to setup (no configuration or initialization needed) and it claims to
+have zero dependencies (except for the latest =bash=, which sometimes is not
+clear from the errors). You simply add a bash script to your repository and
+that's it!
 
 I don't use it in my projects anymore simply because there is no good way to
-extend =makem= without modifying its sources. This makes it hard to upgrade
-=makem= to the latest version as you need to deal with potential conflicts. In
-addition, it is written in bash, meaning that Emacs Lisp interop is very dirty
-and hard to maintain. I've hit =makem= limit and decided to switch. Though in
-general it is a very nice project!
+extend =makem.sh= without modifying its sources. This makes it hard to upgrade
+=makem.sh= to the latest version as you need to deal with potential merge
+conflicts. In addition, it is written in bash, meaning that Emacs Lisp interop
+is very dirty and hard to maintain. I've hit =makem.sh= limit and decided to
+switch. Though for many use cases it is a very nice project!
 
 [[https://cask.readthedocs.io/en/latest/][Cask]] is a classic Emacs package project management tool. It is sophisticated,
 powerful and well documented. It requires to be installed on each developers
