--- a/posts/2020-07-07-task-management-with-roam-vol4.org
+++ b/posts/2020-07-07-task-management-with-roam-vol4.org
@@ -24,13 +24,15 @@ imagine multiple times, so here is a screencast.
   article was merged to =org-roam=, all code is updated to reflect the current
   state of affairs.
 - ~[2021-03-02 Tue]~: Update naming convention to match [[https://github.com/d12frosted/environment/tree/master/emacs][personal configurations]].
+- ~[2021-05-10 Mon]~: Update post to reflect changes in [[https://github.com/org-roam/org-roam/pull/1401][org-roam v2]]. Previous
+  version of this article is available on [[https://github.com/d12frosted/d12frosted.io/blob/c16870cab6ebbaafdf73c7c3589abbd27c20ac52/posts/2020-07-07-task-management-with-roam-vol4.org][GitHub]].
 
 #+BEGIN_HTML
 <!--more-->
 #+END_HTML
 
 The solution is based on the relatively recent [[https://github.com/org-roam/org-roam/pull/839][pull request]] to the org-roam.
-Instead of using =org-roam-insert= directly, we can write a wrapper for it
+Instead of using =org-roam-node-insert= directly, we can write a wrapper for it
 leveraging the return value, name manipulation from the [[https://d12frosted.io/posts/2020-06-25-task-management-with-roam-vol3.html][previous article]] and
 tags lookup from [[http://localhost:8000/posts/2020-06-10-org-roam-tags.html][Org-roam tags]] article.
 
@@ -39,26 +41,25 @@ tags lookup from [[http://localhost:8000/posts/2020-06-10-org-roam-tags.html][Or
     "Insert a link to the note."
     (interactive)
     (when-let*
-        ((res (org-roam-insert))
-         (path (plist-get res :path))
-         (title (plist-get res :title))
-         (roam-tags (org-roam-with-file path nil
-                      (org-roam--extract-tags path))))
-      (when (seq-contains-p roam-tags "People")
+        ((node (org-roam-node-insert))
+         (title (org-roam-node-title node))
+         (tags (org-roam-node-tags node)))
+      (when (seq-contains-p tags "people")
         (save-excursion
           (ignore-errors
             (org-back-to-heading)
             (org-set-tags
              (seq-uniq
               (cons
-               (+org-notes--title-to-tag title)
+               (vulpea--title-to-tag title)
                (org-get-tags nil t)))))))))
 #+end_src
 
-The implementation is straight-forward. We start with calling =org-roam-insert=
-that asks for the note to insert. Then we parse result and query the roam tags
-to understand if the inserted note is related to a person. And if the answer is
-yes, we use =org-set-tags= to automatically tag the heading.
+The implementation is straight-forward. We start with calling
+=org-roam-node-insert= that asks for the note to insert. Then we parse result
+and query the roam tags to understand if the inserted note is related to a
+person. And if the answer is yes, we use =org-set-tags= to automatically tag the
+heading.
 
 In my case, implementation of =vulpea--title-to-tag= is the following.
 
