--- a/posts/2021-01-16-task-management-with-roam-vol5.org
+++ b/posts/2021-01-16-task-management-with-roam-vol5.org
@@ -27,6 +27,8 @@ to describe.
 - ~[2021-03-08 Mon]~: [[https://github.com/Whil-][Gustav]] shared that =org-element-map= has an optional
   parameter =first-match= that works like =seq-find=, meaning that
   =vulpea-project-p= can be optimised.
+- ~[2021-05-10 Mon]~: Update post to reflect changes in [[https://github.com/org-roam/org-roam/pull/1401][org-roam v2]]. Previous
+  version of this article is available on [[https://github.com/d12frosted/d12frosted.io/blob/c16870cab6ebbaafdf73c7c3589abbd27c20ac52/posts/2021-01-16-task-management-with-roam-vol5.org][GitHub]].
 
 #+BEGIN_HTML
 <!--more-->
@@ -34,9 +36,9 @@ to describe.
 
 The core idea is very simple - optimising reads during writes. So every time a
 file is modified, we check if it contains any =TODO= entries, and depending on
-that we either add or remove a =Project= tag from =ROAM_TAGS= property. And
-then, before calling =org-agenda=, we simply =org-roam-db-query= for files that
-have a =Project= tag.
+that we either add or remove a =project= tag from =filetags= property. And then,
+before calling =org-agenda=, we simply =org-roam-db-query= for files that have a
+=project= tag.
 
 #+BEGIN_EXPORT html
 <div class="post-image">
@@ -82,10 +84,11 @@ This might look a little bit too much, so let me explain the code step by step.
    =first-match= argument that can be used for our needs. Thanks [[https://github.com/Whil-][Gustav]] for
    pointing that out.
 
-Now we need to use this function to add or to remove =Project= tag from a note.
+Now we need to use this function to add or to remove =project= tag from a note.
 I think that it should be done in two places - when visiting a note and in
 =before-save-hook=. This way you leave no room for missing a file with =TODO=
-entries.
+entries. It uses [[https://github.com/d12frosted/vulpea/blob/feature/org-roam-v2/vulpea.el#L183][vulpea-buffer-tags-get]] and [[https://github.com/d12frosted/vulpea/blob/feature/org-roam-v2/vulpea.el#L193][vulpea-buffer-tags-add]] from [[https://github.com/d12frosted/vulpea][vulpea]]
+library.
 
 #+begin_src emacs-lisp
   (add-hook 'find-file-hook #'vulpea-project-update-tag)
@@ -95,17 +98,15 @@ entries.
     "Update PROJECT tag in the current buffer."
     (when (and (not (active-minibuffer-window))
                (vulpea-buffer-p))
-      (let* ((file (buffer-file-name (buffer-base-buffer)))
-             (all-tags (org-roam--extract-tags file))
-             (prop-tags (org-roam--extract-tags-prop file))
-             (tags prop-tags))
-        (if (vulpea-project-p)
-            (setq tags (cons "Project" tags))
-          (setq tags (remove "Project" tags)))
-        (unless (eq prop-tags tags)
-          (org-roam--set-global-prop
-           "ROAM_TAGS"
-           (combine-and-quote-strings (seq-uniq tags)))))))
+      (save-excursion
+        (goto-char (point-min))
+        (let* ((tags (vulpea-buffer-tags-get))
+               (original-tags tags))
+          (if (vulpea-project-p)
+              (setq tags (cons "project" tags))
+            (setq tags (remove "project" tags)))
+          (unless (eq original-tags tags)
+            (apply #'vulpea-buffer-tags-set (seq-uniq tags)))))))
 
   (defun vulpea-buffer-p ()
     "Return non-nil if the currently visited buffer is a note."
@@ -116,7 +117,7 @@ entries.
 #+end_src
 
 That's it. Now whenever we modify or visit a notes buffer, this code will update
-the presence of =Project= tag. See it in action:
+the presence of =project= tag. See it in action:
 
 #+BEGIN_EXPORT html
 <div class="post-image">
@@ -130,29 +131,47 @@ the presence of =Project= tag. See it in action:
 :END:
 
 In order to dynamically build =org-agenda-files=, we need to query all files
-containing =Project= tag. =org-roam= uses uses [[https://github.com/skeeto/emacsql][skeeto/emacsql]], and provides a
+containing =project= tag. =org-roam= uses uses [[https://github.com/skeeto/emacsql][skeeto/emacsql]], and provides a
 convenient function =org-roam-db-query= to execute SQL statements against
 =org-roam-db-location= file.
 
 #+begin_src emacs-lisp
   (defun vulpea-project-files ()
-    "Return a list of note files containing Project tag."
-    (seq-map
-     #'car
-     (org-roam-db-query
-      [:select file
-       :from tags
-       :where (like tags (quote "%\"Project\"%"))])))
+    "Return a list of note files containing 'project' tag." ;
+    (seq-uniq
+     (seq-map
+      #'car
+      (org-roam-db-query
+       [:select [nodes:file]
+        :from tags
+        :left-join nodes
+        :on (= tags:node-id nodes:id)
+        :where (like tag (quote "%\"project\"%"))]))))
 #+end_src
 
-This function simply returns a list of files containing =Project= tag. Sure
+This function simply returns a list of files containing =project= tag. Sure
 enough it can be generalised for other needs, but it's good enough for our
-simple use case. The query is run against the following scheme:
+simple use case. The query is run against the following schemes:
 
 #+begin_src emacs-lisp
+  (nodes
+   ([(id :not-null :primary-key)
+     (file :not-null)
+     (level :not-null)
+     (pos :not-null)
+     todo
+     priority
+     (scheduled text)
+     (deadline text)
+     title
+     properties
+     olp]
+    (:foreign-key [file] :references files [file] :on-delete :cascade)))
+
   (tags
-   [(file :unique :primary-key)
-    (tags)])
+   ([(node-id :not-null)
+     tag]
+    (:foreign-key [node-id] :references nodes [id] :on-delete :cascade)))
 #+end_src
 
 Now we can set the list of agenda files:
@@ -226,20 +245,18 @@ For you convenience, the full code is displayed below. It is also available as
          (org-element-property :todo-type h)))))
 
   (defun vulpea-project-update-tag ()
-    "Update PROJECT tag in the current buffer."
-    (when (and (not (active-minibuffer-window))
-               (vulpea-buffer-p))
-      (let* ((file (buffer-file-name (buffer-base-buffer)))
-             (all-tags (org-roam--extract-tags file))
-             (prop-tags (org-roam--extract-tags-prop file))
-             (tags prop-tags))
-        (if (vulpea-project-p)
-            (setq tags (cons "Project" tags))
-          (setq tags (remove "Project" tags)))
-        (unless (eq prop-tags tags)
-          (org-roam--set-global-prop
-           "ROAM_TAGS"
-           (combine-and-quote-strings (seq-uniq tags)))))))
+      "Update PROJECT tag in the current buffer."
+      (when (and (not (active-minibuffer-window))
+                 (vulpea-buffer-p))
+        (save-excursion
+          (goto-char (point-min))
+          (let* ((tags (vulpea-buffer-tags-get))
+                 (original-tags tags))
+            (if (vulpea-project-p)
+                (setq tags (cons "project" tags))
+              (setq tags (remove "project" tags)))
+            (unless (eq original-tags tags)
+              (apply #'vulpea-buffer-tags-set (seq-uniq tags)))))))
 
   (defun vulpea-buffer-p ()
     "Return non-nil if the currently visited buffer is a note."
@@ -249,13 +266,16 @@ For you convenience, the full code is displayed below. It is also available as
           (file-name-directory buffer-file-name))))
 
   (defun vulpea-project-files ()
-    "Return a list of note files containing Project tag."
-    (seq-map
-     #'car
-     (org-roam-db-query
-      [:select file
-       :from tags
-       :where (like tags (quote "%\"Project\"%"))])))
+      "Return a list of note files containing 'project' tag." ;
+      (seq-uniq
+       (seq-map
+        #'car
+        (org-roam-db-query
+         [:select [nodes:file]
+          :from tags
+          :left-join nodes
+          :on (= tags:node-id nodes:id)
+          :where (like tag (quote "%\"project\"%"))]))))
 
   (defun vulpea-agenda-files-update (&rest _)
     "Update the value of `org-agenda-files'."
