--- a/posts/2021-01-24-task-management-with-roam-vol6.org
+++ b/posts/2021-01-24-task-management-with-roam-vol6.org
@@ -6,7 +6,7 @@ publish: true
 ---
 
 In one of the previous articles ([[https://d12frosted.io/posts/2020-06-25-task-management-with-roam-vol3.html][Vol 3]] to be precise) we talked about automatic
-setup of =FILETAGS=, so each of the task in note related to a person is
+setup of =filetags=, so each of the task in note related to a person is
 automatically tagged thanks to [[https://orgmode.org/manual/Tag-Inheritance.html][tag inheritance]]. Then, in [[https://d12frosted.io/posts/2020-07-07-task-management-with-roam-vol4.html][Vol 4]] we talked about
 automatic tagging of tasks whenever a person is mentioned either in the title or
 the body of some task. This all makes =org-agenda= [[https://orgmode.org/manual/Matching-tags-and-properties.html#Matching-tags-and-properties][matching capabilities]] really
@@ -30,6 +30,8 @@ Believe me, intro is longer than the content!
 *Change Log:*
 
 - ~[2021-03-02 Tue]~: Update naming convention to match [[https://github.com/d12frosted/environment/tree/master/emacs][personal configurations]].
+- ~[2021-05-10 Mon]~: Update post to reflect changes in [[https://github.com/org-roam/org-roam/pull/1401][org-roam v2]]. Previous
+  version of this article is available on [[https://github.com/d12frosted/d12frosted.io/blob/c16870cab6ebbaafdf73c7c3589abbd27c20ac52/posts/2021-01-24-task-management-with-roam-vol6.org][GitHub]].
 
 #+BEGIN_HTML
 <!--more-->
@@ -47,13 +49,9 @@ Long story short, here is the function you can bind or call by name using =M-x=:
                     (lambda (note)
                       (seq-contains-p (vulpea-note-tags note)
                                       "people"))))
-           (names (seq-map
-                   #'car
-                   (org-roam-db-query
-                    [:select title
-                     :from titles
-                     :where (= file $s1)]
-                    (vulpea-note-path person))))
+           (node (org-roam-node-from-id (vulpea-note-id person)))
+           (names (cons (org-roam-node-title node)
+                        (org-roam-node-aliases node)))
            (tags (seq-map #'vulpea--title-to-tag names))
            (query (string-join tags "|")))
       (dlet ((org-agenda-overriding-arguments (list t query)))
