--- a/assets/support.org
+++ b/assets/support.org
@@ -5,3 +5,4 @@ contributing or becoming a [[https://www.patreon.com/d12frosted][patreon]]. Spec
 
 - [[https://github.com/jidicula][Johanan Idicula]]
 - [[https://github.com/montchr][Chris Montgomery]]
+- [[http://github.com/lyndondrake][Lyndon Drake]]
