--- a/posts/2021-01-24-task-management-with-roam-vol6.org
+++ b/posts/2021-01-24-task-management-with-roam-vol6.org
@@ -92,6 +92,16 @@ That's it! Now see it in action, again.
 </div>
 #+END_EXPORT
 
+* Task Management with org-roam Series
+
+1. [[http://localhost:8000/posts/2020-06-23-task-management-with-roam-vol1.html][Path to Roam]]
+2. [[https://d12frosted.io/posts/2020-06-24-task-management-with-roam-vol2.html][Categories]]
+3. [[https://d12frosted.io/posts/2020-06-25-task-management-with-roam-vol3.html][FILETAGS]]
+4. [[https://d12frosted.io/posts/2020-07-07-task-management-with-roam-vol4.html][Automatic tagging]]
+5. [[https://d12frosted.io/posts/2021-01-16-task-management-with-roam-vol5.html][Dynamic and fast agenda]]
+6. [[https://d12frosted.io/posts/2021-01-24-task-management-with-roam-vol6.html][Select a person and view related tasks]]
+7. Capture
+
 * References
 
 - [[https://orgmode.org/worg/dev/org-element-api.html][Org Element API]]
