--- a/posts/2021-06-11-path-to-org-roam-v2.org
+++ b/posts/2021-06-11-path-to-org-roam-v2.org
@@ -14,28 +14,29 @@ In my opinion, [[https://github.com/org-roam/org-roam/][org-roam]] is among the 
 the last 5 years. Forget Zettelkasten method, =org-roam= is a solution for
 non-hierarchical note-taking regardless of methodology you are worshiping. The
 most important and appealing feature of =org-roam= is its database! Just
-imagine, in less than a second I can filter by tags, aliases, relations and
-other things a collection of 10000+ notes. This is what made my [[https://github.com/d12frosted/vino][wine tracking]]
-solution practical, and this is what I used to build various tools for
-presenting non-trivial views around my notes ([[https://github.com/d12frosted/environment/blob/master/emacs/README.org#managing-litnotes][example of a public one]]).
+imagine, in less than a second I can filter a collection of 10000+ notes by
+tags, title, aliases, links and other things. This is what made my [[https://github.com/d12frosted/vino][wine tracking]]
+solution usable with ever growing collection of tasting notes, and this is what
+I used to build various tools for presenting non-trivial views around my notes
+([[https://github.com/d12frosted/environment/blob/master/emacs/README.org#managing-litnotes][example of a public one]]).
 
-And now =org-roam= is very [[https://github.com/org-roam/org-roam/pull/1401#issuecomment-857646674][close to release]] of =V2=, first major redesign
-affecting both users and authors of libraries built on top of =org-roam=. And
-while PR remains a mere draft, =V2= is so amazing and so much more stable than
-=V1=, that my advice is to drop the chains of old =org-roam= and embrace all the
-goodness it has.
+And now =org-roam= is very [[https://github.com/org-roam/org-roam/pull/1401#issuecomment-857646674][close to release]] of =V2=, the first major redesign
+affecting both users and authors of libraries extending =org-roam=. And while PR
+remains a mere draft, =V2= is so amazing and is so much more stable than =V1=,
+that my advice is to drop the chains of old =org-roam= and embrace all the
+goodness =V2= brings.
 
 Unfortunately, major redesign means lots of breaking changes and in this post I
 am going to describe my migration experience, code I used to migrate my notes
 and share some thoughts after migrating a code base comparable to =org-roam=
-itself to the new version. Of course, it touches my precious [[https://github.com/d12frosted/vulpea][vulpea]] library (the
-fox image is its icon).
+itself. Of course, it touches my precious [[https://github.com/d12frosted/vulpea][vulpea]] library (the fox image is its
+icon), so expect some advertisement™.
 
 NB. Migration process means adapting to and overcoming breaking changes. Since
-=V2= has so many of them, this article might look pessimistic or depressing. But
+=V2= is full of them, this article might look pessimistic or depressing. But
 don't get fooled, I think that =V2= is amazing. I am very happy to use it on a
 daily basis and I never looked back. [[https://github.com/jethrokuan][Jethro]] is doing amazing work! As well as
-all [[https://github.com/org-roam/org-roam/graphs/contributors][contributors]] (with my extra kudos to [[https://github.com/nobiot][Noboru Ota]], because Noboru rocks).
+all [[https://github.com/org-roam/org-roam/graphs/contributors][contributors]] (with extra kudos to [[https://github.com/nobiot][Noboru Ota]], because Noboru rocks).
 
 #+BEGIN_HTML
 <!--more-->
@@ -58,7 +59,7 @@ a formal definition of data types makes it easier to build on top of that. You
 have completion for fields, you have byte compiler to warn you on missing field,
 etc. So even if as an author of library you are totally fine with not having a
 formal definition of your data types, they are a game-changer for people using
-your library.
+it.
 
 This is why I am so happy that =org-roam= finally formalised =org-roam-node=.
 And one of the best parts about this change - there is no distinction between
@@ -81,12 +82,12 @@ be part of =org-roam= database. Meaning that if your heading doesn't have an
 =ID=, it will not be picked up by =org-roam=.
 
 And I am happy about this requirement, because ids are the only way to identify
-a note (I know, tautology). And I was [[https://github.com/d12frosted/vulpea/commit/8820c9af2c71c1e995856432c5106aac2774d162#diff-ecbc1aa90e9ff97a00b0b2aab1551bceee0c4d21993146bdcb1af4de31c9cac6R26][advocating]] for them to be mandatory from
-the day 1 of =vulpea=. In my sense, missing =id= means that the note doesn't
-exists yet (or at least, the system doesn't know about it).
+a note (I know, tautology). And =vulpea= [[https://github.com/d12frosted/vulpea/commit/8820c9af2c71c1e995856432c5106aac2774d162#diff-ecbc1aa90e9ff97a00b0b2aab1551bceee0c4d21993146bdcb1af4de31c9cac6R26][required]] them from the day 1. In my
+sense, missing =ID= means that the note doesn't exists yet (or at least, the
+system doesn't know about it yet).
 
 This is important, because again, it reduces any indirection in libraries code
-related to note/node identification. Just ID and that's it.
+related to note/node identification. Just =ID= and that's it.
 
 Another reason to have mandatory ids is linking.
 
@@ -105,7 +106,7 @@ become paranoid with such approach, because you can not trust a system that
 misses links.
 
 Now, ids don't change (quite a philosophical question about identity, but let's
-skip this one for another day). And Org mode supports id links. Perfect! With
+skip this one for another day). And Org mode supports =ID= links. Perfect! With
 =V2= all links are id based and less maintenance is required when you move
 something around. Great, users of =org-roam= and its maintainers are both
 winners.
@@ -134,8 +135,7 @@ but still.
 Another thing to keep in mind, valid tag for =#+roam_tags= is not necessary a
 valid tag for =#+file_tags=. For example, spaces, colons are not allowed - tags
 are normal words containing letters, numbers, '_', and '@' (see =org-tag-re=).
-So you need to keep that in mind during migration (covered in attached migration
-script).
+So you need to keep that in mind during migration (covered in attached script).
 
 Since I was abusing tagging system, I had to go over every such case and find
 another way to achieve my goal. Just as example, I was tagging all my =litnotes=
@@ -273,10 +273,10 @@ Since =V1= lacked good abstraction over database, it was very common to... well
 you know, use =org-roam-db-query= directly to execute arbitrary SQL
 queries[fn:3], which of course relies on /knowing/ the scheme. But this coupling
 bites really hard with =V2=, because the scheme changed dramatically. So you
-just have to sit down and work with *every* query you perform. Unfortunately,
-there is no pill here. My advice is to minimise amount of direct queries by
-extracting them into helpers or even using functions provided by =org-roam=
-instead.
+just have to sit down and work with *every* query you perform. Some changes are
+trivial, some are not. Unfortunately, there is no pill here. My advice is to
+minimise amount of direct queries by using functions provided by =org-roam=
+or extracting them into your own helpers.
 
 With =org-roam-node= and some other data types everything becomes really nice.
 There is no need for indirection for file-level or heading-level nodes anymore.
@@ -284,7 +284,7 @@ You know exactly, what fields you have data you get. The only thing you need to
 keep in mind - not all fields are populated, so there is =org-roam-populate=
 that works with various types.
 
-You check my PRs related to migration to =V2= for inspiration (unfortunately
+You can check my PRs related to migration to =V2= for inspiration (unfortunately
 most of them already have new features as I can't wait for new =org-roam=
 release):
 
@@ -332,26 +332,27 @@ The most important lesson for me is that =vulpea= has huge ROI. Primary goal of
 taking. And this migration process simply proved that the goal worth the effort.
 
 Another lesson I am taking from this situation is that revolutionary approach is
-stressful and time consuming for users (not sure about Jethro). Even though in
-this case it totally worth all the nerves and doubts. If you are going to
-migrate now - it's polished! It also means that one of the lessons is - sequel
-might be even better than original :)
+stressful and time consuming for users (not sure about Jethro, I hope he is all
+right). Even though in this case it totally worth all the nerves and doubts. It
+is stable, polished and better. It also implies another lesson - sequel might be
+even better than original :)
 
-I am also annoyed by that fact that I keep abusing tagging system whenever I
+I am also annoyed by the fact that I keep abusing tagging system whenever I
 encounter it. Whenever it becomes multidimensional, it is a sign to stop and
-take a step back. Tags should not turn into total mess.
+take a step back. Tags should not turn into total mess[fn:6].
 
 And of course, =org-roam= community is fantastic. I don't read all the messages
 on [[https://org-roam.discourse.group/][org-roam.discourse.group]], but when I do, I am simply amazed by all the use
 cases you folks have, and how helpful you are! Seriously, this is amazing. And
-it also a credit to [[https://github.com/jethrokuan/][Jethro]]. Seriously, =org-roam= is the best thing happened in
-my note-taking life.
+it also a credit to [[https://github.com/jethrokuan/][Jethro]]. Without doubt, =org-roam= is the best thing happened
+in my note-taking life.
 
 * Resources
 
+- [[https://github.com/org-roam/org-roam/pull/1401][org-roam#1401]]
+- [[https://org-roam.discourse.group/t/org-roam-major-redesign/1198][Org-roam major redesign]]
 - [[https://github.com/org-roam/org-roam/wiki/Hitchhiker's-Rough-Guide-to-Org-roam-V2][Hitchhiker's Rough Guide to Org roam V2]]
 - [[https://org-roam.discourse.group/t/the-org-roam-v2-great-migration/1505][The Org-roam v2 Great Migration]]
-- [[https://orgmode.org/manual/Tag-Inheritance.html#Tag-Inheritance][Tag Inheritance]]
 
 [fn:0] I don't even remember, because I quickly switched to ID links once they
 landed to =org-roam=.
@@ -372,3 +373,5 @@ time trying to figure out why it was happening.
 using for note taking utilities. At some point of time it was a Haskell command
 line application... Now it's an Emacs Lisp library leveraging Org Mode and Org
 Roam! It definitely has more active life than me.
+
+[fn:6] Maybe a partial mess, but definitely not total.
